# AppliedDataScienceCapstone

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROJECT_REFACTORING.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  SpaceX_Machine Learning Prediction_Part_5.ipynb  edadataviz.ipynb  extracting_data_task.ipynb  jupyter-labs-spacex-data-collection-api.ipynb  lab_jupyter_launch_site_location.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  tests.yml
docs/: API.md  CICD.md  CICD_SETUP.md  METHODOLOGY.md
notebooks/original/: SpaceX_Machine_Learning_Prediction_Part_5.ipynb  jupyter-labs-eda-sql-coursera_sqllite.ipynb  lab_jupyter_launch_site_location.ipynb  labs-jupyter-spacex-Data wrangling.ipynb  labs-jupyter-spacex-Data-wrangling.ipynb
src/: __init__.py  config.py  logger.py
src/data/: __init__.py  processing.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py
tests/: __init__.py  test_data.py  test_feature_engineering.py  test_logger.py  test_models.py  test_visualizations.py
